--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: NiMARE Sprint
+title:  Coastal Coding for Reproducible Neuroimaging
 email: alaird@fiu.edu
-url: https://github.com/neurostuff/NiMARE
-description: "Contribute to a new Python tool for neuroimaging meta-analysis"
+url: https://coastal-coding.github.io
+description: "ReproNim+Nipype 2.0 / NiMARE @FIU in Miami"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
